# persil

./: README.md  setup.cfg  test-persil.py  test-rips.py
src/: __init__.py  homology.py  simplexchain.py
src/persil/: __init__.py  graphical.py  homology.py  persil.py  simplexchain.py  vietorisrips.py
