[metadata]

name = persil
version = 0.0.1
author = Guillaume Rousseau
author_email = guillaume.rousseau@ens-lyon.fr
description = A package for persistent homology
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quenouillaume/persil
project_urls =
    Bug Tracker = https://github.com/quenouillaume/persil/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src